06-networking/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: demo
  labels:
    app: demo
spec:
  to:
    kind: Service
    name: demo
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
